src/objects/Disbursement_Issue__c.object
<CustomObject>
    <description>Object that holds the old and new values of fields that were changed during rerun interfaces</description>
    <fields>
        <fullName>Changed_Field__c</fullName>
        <label>Changed Field</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Loan</label>
        <referenceTo>Loan__c</referenceTo>
        <relationshipLabel>Disbursement Issues</relationshipLabel>
        <relationshipName>Disbursement_Issues</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>New_Value__c</fullName>
        <label>New Value</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Value__c</fullName>
        <label>Old Value</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Id__c</fullName>
        <label>Parent Id</label>
        <length>24</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>SBA Loan History</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Assistance</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Disbursement Issue</label>
    <nameField>
        <displayFormat>Issue-{0}</displayFormat>
        <label>Disbursement Issue Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Disbursement Issues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>